--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Button and List Example</title>
+    <title>Hello world</title>
   </head>
   <body>
-    <h1 id="heading">Hello, World!</h1>
+    <h1 id="heading">Hello world</h1>
 
     <button id="my-button">Click Me</button>
 
